--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1 class="title">Srimat Srivats</h1>Developer
       <p class="section__text__p2">Software Engineer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('WorkResume.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('WorkResumeFinal.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -350,11 +350,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Codeforces</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://codeforces.com/profile/D_Cod3r')">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https:')">
               Profile
             </button>
-            <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://codeforces.com/contests/with/D_Cod3r')">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https:')">
               Stats
             </button>
           </div>
